# bieterrunde

./: .env.template  .gitignore  CLAUDE.md  LICENSE  README.md  compose.yaml  docker-compose.yaml  manage.py  mise.local.toml  mise.toml  prek.toml  pyproject.toml
.claude/: settings.json
.claude/skills/verify/: SKILL.md
.github/workflows/: django.yml
bieterrunde/: asgi.py  settings.py  settings_dev.py  settings_prod.py  urls.py  wsgi.py
docker/: Dockerfile  entrypoint.sh
docker/postgres-init.d/: 00-createdb-bieterrunde.sql
voting/: admin.py  context_processors.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
voting/management/commands/: expire_votings.py  webling_export.py  webling_import.py
voting/migrations/: 0001_initial.py  0002_votinground_active_votinground_unique_round_number_and_more.py  0002_votinground_bids_applied_alter_voting_total_count_and_more.py  0003_alter_bid_options_alter_vote_options_and_more.py  0003_alter_vote_options_alter_voting_options_and_more.py  0004_alter_voting_options_and_more.py  0005_voter_alter_bid_options_remove_voting_voter_count_and_more.py  0006_voting_date.py  0007_alter_voter_options.py  0008_alter_voting_date.py
voting/static/: boxicons.min.css  htmx-remove-me.js  pico.pumpkin.min.css
voting/templates/django/forms/: field.html
voting/templates/django/forms/widgets/: radio.html  radio_option.html
voting/templates/voting/: base.html  frag_voting_info.html  index.html  voter_registration.html  voting_base.html  voting_create.html  voting_info.html  voting_manage.html  voting_vote.html  voting_vote_done.html
voting/templates/voting/fragments/: manage_buttons.html  manage_voting_round_info.html
voting/templates/voting/htmx/: manage_import_bids.html  manage_voter_add.html  manage_voter_edit.html  manage_voter_quick_add.html  manage_voters.html  voting_manage.html
voting/templates/voting/tags/: manage_round_info.html  messages.html  round_info.html  voting_info.html
voting/templatetags/: voting.py
voting/utils/: hmac_auth.py  webling_api.py
