[tool.poetry]
name = "bieterrunde"
version = "0.7.3"
description = ""
authors = ["Ulrich Petri <ulo@ulo.pe>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
django-htmx = "^1.17.3"
django-guest-user = "^0.5.5"
django-qr-code = "^4.0.1"
django-click = "^2.4.0"
httpx = "^0.27.0"
more-itertools = "^10.7.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest-django = "^4.8.0"
bpython = "^0.25"


[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"
psycopg2 = "^2.9.9"
whitenoise = "^6.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "bieterrunde.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
